--- a/src/config.yml
+++ b/src/config.yml
@@ -2,6 +2,6 @@ IP: a.try-hg.com
 MySQL: true
 MySQL_IP: localhost
 MySQL_Porta: 3306
-MySQL_Database: WixedHG
+MySQL_Database: WhateverHG
 MySQL_User: root
 MySQL_Password: tryzaolindo
